--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,17 @@ on:
   push:
     branches:
       - main
-name: Deploy Solary
+name: 🚀 Deploy website on push
 jobs:
   web-deploy:
-    name: deploy
+    name: 🎉 Deploy
     runs-on: ubunto-latest
     steps:
-      - name: get latest code
-        uses: actions/checkout@v2
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
 
-        - name: sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.ftp.host }}
           username: ${{ secrets.ftp.user }}
